--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident beatae odit mollitia eum laborum dolores cum saepe eaque deserunt corporis! Molestiae, nulla, incidunt. Corporis sint nemo ratione aliquid maxime quis est ut, debitis culpa tempore dolorem quia voluptatem, libero mollitia rem quas hic fugiat, natus laboriosam quam sit. Fugit, ratione!</p>
         </div>
         <div class="col-md-6">
-          <img src="https://source.unsplash.com/random/700x700/?technology" alt="" class="img-fluid rounded-circle d-none d-md-block about-img">
+          <img src="img/photo7.jpg" alt="" class="img-fluid rounded-circle d-none d-md-block about-img">
         </div>
       </div>
     </div>
