--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
           <div class="card-columns">
             <!-- Post 1 -->
             <div class="card">
-              <img src="https://source.unsplash.com/random/300x200" alt="" class="img-fluid">
+              <img src="img/photo8.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <h4 class="card-title">Blog Post One</h4>
                 <small class="text-muted">Written by Jeff on 05/20</small>
@@ -85,7 +85,7 @@
 
             <!-- Post 2 -->
             <div class="card">
-              <img src="https://source.unsplash.com/random/301x200" alt="" class="img-fluid">
+              <img src="img/photo9.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <h4 class="card-title">Blog Post Two</h4>
                 <small class="text-muted">Written by Jeff on 05/20</small>
@@ -105,7 +105,7 @@
 
             <!-- Post 3 -->
             <div class="card">
-              <img src="https://source.unsplash.com/random/302x200" alt="" class="img-fluid">
+              <img src="img/photo10.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <h4 class="card-title">Blog Post Three</h4>
                 <small class="text-muted">Written by Jeff on 05/20</small>
