--- a/index.html
+++ b/index.html
@@ -175,40 +175,40 @@
       <p class="text-center">Check out our photos</p>
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
-            <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid">
+          <a href="img/photo1.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
+            <img src="img/photo1.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery" data-height="561" data-width="561">
-            <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+          <a href="img/photo2.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="561" data-width="561">
+            <img src="img/photo2.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
-            <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+          <a href="img/photo3.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="562" data-width="562">
+            <img src="img/photo3.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery" data-height="563" data-width="563">
-            <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid">
+          <a href="img/photo4.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="563" data-width="563">
+            <img src="img/photo4.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery" data-height="564" data-width="564">
-            <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid">
+          <a href="img/photo5.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="564" data-width="564">
+            <img src="img/photo5.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
-            <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid">
+          <a href="img/photo6.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565" data-width="565">
+            <img src="img/photo6.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
